Добавлены варианты http ошибок; Поправлен readme; Создана отдельная dto для возвращения ошибок; Добавлен linter
